Fix: 지도뷰 overflow 속성 관련 수정

--- a/src/styles/pages/compareMapView.module.scss
+++ b/src/styles/pages/compareMapView.module.scss
@@ -1,7 +1,9 @@
 @import "../main.module.scss";
 
-body {
-    overflow: hidden !important;
+.wrapper {
+    width: 100vw;
+    height: calc(100vh - 5rem);
+    overflow: hidden;
 
     .title {
         @include typoStyle(500, 24px, 36px, -0.5px, $main);
